--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
     "express-graphql": "^0.12.0",
     "graphql": "^15.9.0",
-    "mongoose": "^8.7.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.2",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
