--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "graphql": "^15.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "redis": "^4.7.0",
+    "stripe": "^17.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
