--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jslint": "^0.12.1",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
