--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "devStart": "nodemon server.js",
-    "lint": "jslint **/*.js"
+    "lint": "eslint . --ext .js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,9 @@
     "stripe": "^17.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
     "jest": "^29.7.0",
     "jslint": "^0.12.1",
     "nodemon": "^3.1.7",
